--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 fastapi
 strawberry-graphql[fastapi]
-psycopg2-binary
-sqlalchemy
-uvicorn
-pydantic
+asyncpg
+sqlalchemy[asyncio]
+uvicorn[standard]
+pydantic>=2.0
+pydantic-settings>=2.0
 httpx
